--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1694046349000/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1687772187254/work
 beautifulsoup4==4.12.2
-Bottleneck @ file:///opt/conda/conda-bld/bottleneck_1657175564434/work
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
-contourpy @ file:///opt/conda/conda-bld/contourpy_1663827406301/work
 customtkinter==5.2.1
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 darkdetect==0.8.0
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
 et-xmlfile==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1692026125334/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
 filelock==3.12.4
 fonttools==4.25.0
 fsspec==2023.10.0
@@ -27,78 +16,25 @@ googleapis-common-protos==1.61.0
 grpcio==1.59.0
 grpcio-status==1.59.0
 idna==3.4
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1688754491823/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1693880262622/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1696264049390/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.2
-joblib @ file:///croot/joblib_1685113087166/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1697036793436/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1696972408382/work
-kiwisolver @ file:///croot/kiwisolver_1672387140495/work
 MarkupSafe==2.1.3
-matplotlib @ file:///croot/matplotlib-suite_1693812469450/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
 mpmath==1.3.0
 munkres==1.1.4
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
-networkx==3.2
-numexpr @ file:///croot/numexpr_1696515281613/work
-numpy @ file:///croot/numpy_and_numpy_base_1695830428084/work/dist/numpy-1.26.0-cp310-cp310-linux_x86_64.whl#sha256=44e4fc8b120e39dfc8d2d42f5f5dbbf0710088fee77e66ad2e1cb941eef4e397
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.3.52
-nvidia-nvtx-cu12==12.1.105
-opencv-python-headless==4.8.1.78
+networkx>=2.8,<3.0
+numpy==1.19.5
+opencv-python==4.5.1.48  # or whatever version you are using
+pytesseract==0.3.7
 openpyxl==3.1.2
-packaging @ file:///croot/packaging_1693575174725/work
-pandas @ file:///croot/pandas_1697477158611/work/dist/pandas-2.1.1-cp310-cp310-linux_x86_64.whl#sha256=9030ae12668e518e702e668fa89f07f2847a175cdd526f95e39cb603d11ed9b8
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///croot/pillow_1696580024257/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1696272223550/work
-ply==3.11
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1688565951714/work
-proto-plus==1.22.3
+pandas==1.3.3  # Example version, adjust as needed
+Pillow==8.3.1  # Example version, adjust as needed
 protobuf==4.24.4
-psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1691408637400/work
-pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
-PyQt5-sip==12.11.0
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///croot/pytz_1695131579487/work
-pyzmq @ file:///croot/pyzmq_1686601365461/work
 requests==2.31.0
 rsa==4.9
-scikit-learn @ file:///croot/scikit-learn_1690978916802/work
-scipy @ file:///croot/scipy_1696543286448/work/dist/scipy-1.11.3-cp310-cp310-linux_x86_64.whl#sha256=f3f9770e4b7f570998798418be298ff7c652ffb4b05057597988c201dfa1e951
-seaborn @ file:///croot/seaborn_1673479180098/work
-sip @ file:///tmp/abs_44cd77b_pu/croots/recipe/sip_1659012365470/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-soupsieve==2.5
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+scipy==1.7.1  # Example version, adjust as needed
+seaborn==0.11.2  # Example version, adjust as needed
 sympy==1.12
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
 torch==2.1.0
-tornado @ file:///croot/tornado_1696936946304/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1696377679271/work
-triton==2.1.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
 urllib3==2.0.7
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1696255154857/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+tqdm==4.62.0
+transforms==4.15.0
+
